 syntax = "proto3";

package ru.hse.lmsteam.proto.tests;

option java_multiple_files = true;
option java_package = "ru.hse.lmsteam.schema.api.tests";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "ru/hse/lmsteam/proto/common/pageable.proto";
import "ru/hse/lmsteam/proto/lessons/lessons_api.proto";

message GetTest {
  message Response {
    Test test = 1;
  }
}

message CreateOrUpdateTest {
  message Request {
    string lesson_id = 1;
    google.protobuf.Timestamp deadline_date = 2;
    google.protobuf.Timestamp publish_date = 3;
    string title = 4;
    string description = 5;
    string grading_criteria = 6;
    repeated string external_material_urls = 7;
  }

  message Response {
    Test test = 1;
  }
}

message DeleteTest {
  message Response {
    int64 entries_deleted = 1;
  }
}

message GetTests {
  message Response {
    ru.hse.lmsteam.proto.common.Page page = 1;
    repeated TestSnippet tests = 2;
  }
}

message Test {
  string id = 1;
  ru.hse.lmsteam.proto.lessons.LessonSnippet lesson = 2;
  google.protobuf.Timestamp deadline_date = 3;
  google.protobuf.Timestamp publish_date = 4;
  string title = 5;
  string description = 6;
  string grading_criteria = 7;
  repeated string external_material_urls = 8;
}

message TestSnippet {
  string id = 1;
  ru.hse.lmsteam.proto.lessons.LessonSnippet lesson = 2;
  string title = 3;
  google.protobuf.Timestamp deadline_date = 4;
}